@startuml
annotation java.lang.Override
class enums.TipoArma
class enums.TipoContinente
class exceptions.CartaNonRegistrataPSWNome
class exceptions.GiocatoreNonRegistrato
class exceptions.NMaxTruppeRinforzoRaggiunto
class exceptions.RisikoExceptions
class exceptions.SpostamentoFallito
class exceptions.TerritorioNonPosseduto
class exceptions.TerritorioNonRegistrato
class java.io.IOException
class java.time.LocalDate
class java.util.ArrayList
class java.util.Collections
class java.util.logging.Level
class java.util.logging.Logger
class logic.FaseAttacco
class logic.FaseRinforzo
class logic.FaseSpostamento
class logic.FineObiettivo
class logic.GestionePartita
class model.CarteArmiPartita
class model.Giocatore
class model.TerritorioDettagliato
class model.TerritorioPartita
interface logic.InterfacciaPartita
logic.FaseAttacco ..> java.lang.Override
logic.FaseAttacco ..> java.io.IOException
logic.FaseAttacco ..> java.util.ArrayList
logic.FaseAttacco ..> java.util.logging.Level
logic.FaseAttacco ..> java.util.logging.Logger
logic.FaseAttacco --|> logic.GestionePartita
logic.FaseRinforzo ..> java.lang.Override
logic.FaseRinforzo ..> enums.TipoArma
logic.FaseRinforzo ..> enums.TipoContinente
logic.FaseRinforzo ..> exceptions.CartaNonRegistrataPSWNome
logic.FaseRinforzo ..> exceptions.GiocatoreNonRegistrato
logic.FaseRinforzo ..> exceptions.NMaxTruppeRinforzoRaggiunto
logic.FaseRinforzo ..> exceptions.RisikoExceptions
logic.FaseRinforzo ..> exceptions.TerritorioNonPosseduto
logic.FaseRinforzo ..> exceptions.TerritorioNonRegistrato
logic.FaseRinforzo ..> java.io.IOException
logic.FaseRinforzo ..> java.util.ArrayList
logic.FaseRinforzo ..> java.util.logging.Level
logic.FaseRinforzo ..> java.util.logging.Logger
logic.FaseRinforzo --|> logic.GestionePartita
logic.FaseRinforzo ..> model.CarteArmiPartita
logic.FaseRinforzo ..> model.Giocatore
logic.FaseRinforzo ..> model.TerritorioDettagliato
logic.FaseRinforzo ..> model.TerritorioPartita
logic.FaseSpostamento ..> java.lang.Override
logic.FaseSpostamento ..> exceptions.RisikoExceptions
logic.FaseSpostamento ..> exceptions.SpostamentoFallito
logic.FaseSpostamento ..> exceptions.TerritorioNonPosseduto
logic.FaseSpostamento ..> exceptions.TerritorioNonRegistrato
logic.FaseSpostamento ..> java.io.IOException
logic.FaseSpostamento ..> java.util.ArrayList
logic.FaseSpostamento ..> java.util.logging.Level
logic.FaseSpostamento ..> java.util.logging.Logger
logic.FaseSpostamento --|> logic.GestionePartita
logic.FaseSpostamento ..> model.Giocatore
logic.FaseSpostamento ..> model.TerritorioPartita
logic.FineObiettivo ..> java.lang.Override
logic.FineObiettivo ..> java.io.IOException
logic.FineObiettivo ..> java.util.ArrayList
logic.FineObiettivo --|> logic.GestionePartita
logic.GestionePartita ..> java.lang.Override
logic.GestionePartita ..> java.io.IOException
logic.GestionePartita ..> java.time.LocalDate
logic.GestionePartita ..> java.util.ArrayList
logic.GestionePartita ..> java.util.Collections
logic.GestionePartita --|> logic.InterfacciaPartita
logic.InterfacciaPartita ..> exceptions.RisikoExceptions
logic.InterfacciaPartita ..> java.io.IOException
@enduml